--- a/index.html
+++ b/index.html
@@ -125,17 +125,27 @@
 
           <!--СЛАЙДЕР-->
           <div class="slider  left-side">
-            <div class="slider__slide-1">
+            <div class="slider__slide  slider__slide_1">
               <h4 class="slider__slide-caption">Перфораторы</h4>
               <p class="slider__slide-slogan">Настоящие мужские игрушки</p>
-              <a href="#" class="slider__btn">Открыть каталог</a>
+              <a href="#" class="btn btn_slider">Открыть каталог</a>
             </div>
 
-            <div class="slider__slide-2">
+            <div class="slider__slide  slider__slide_2">
               <h4 class="slider__slide-caption">Дрели</h4>
               <p class="slider__slide-slogan">Соседям на радость</p>
-              <a href="#" class="slider__btn">Открыть каталог</a>
+              <a href="#" class="btn btn_slider">Открыть каталог</a>
             </div>
+
+            <div class="slider__controls">
+              <input id="slide1" type="radio" name="slide-select" checked>
+              <input id="slide2" type="radio" name="slide-select">
+
+              <div class="slider__selector-container">
+                <label for="slide1"></label>
+                <label for="slide2"></label>
+              </div>
+             </div>
           </div><!--Конец СЛАЙДЕР-->
 
 
@@ -157,7 +167,7 @@
           <div class="popular__items">
             <div class="popular__caption">
               <h3>Популярные товары:</h3>
-              <a href="#" class="popular__btn">Все популярные товары</a>
+              <a href="#" class="btn  btn_popular">Все популярные товары</a>
             </div>            
 
              <!-- ПОПУЛЯРНЫЕ ТОВАРЫ -->
@@ -225,7 +235,7 @@
           <div class="popular__manufacturers">
             <div class="popular__caption">
               <h3>Популярные производители:</h3>
-              <a href="#" class="popular__btn">Все производители</a>
+              <a href="#" class="btn  btn_popular">Все производители</a>
             </div>
             
             <ul class="popular__manufacturers-list">
