bcghfdktys jib,rf gjckt ghjdthrb dfkblfnjhv

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
           <!-- Поиск по сайту -->
           <form class="header__search  search  left-side" action="https://echo.htmlacademy.ru">
-            <input class="search__search-field" type="search" name="search-request" placeholder="Поиск:"></input>
+            <input class="search__search-field" type="search" name="search-request" placeholder="Поиск:">
 
             <!-- РЕАЛИЗАЦИЯ ИКОНКИ В СТРОКЕ ПОИСКА В ВИДЕ КНОПКИ -->
             <!-- <button class="serch__btn" type="submit">Поиск</button> -->
@@ -165,7 +165,7 @@
 
 
         <!-- ПОПУЛЯРНЫЕ -->
-        <artticle class="popular">
+        <div class="popular">
           <div class="popular__items">
             <div class="popular__caption">
               <h3>Популярные товары:</h3>
@@ -307,7 +307,7 @@
               
             </ul>
           </div><!--Конец ПОПУЛЯРНЫЕ ПРОИЗВОДИТЕЛИ-->
-        </artticle><!--Конец ПОПУЛЯРНЫЕ-->
+        </div><!--Конец ПОПУЛЯРНЫЕ-->
       </div>
 
 
